Version 2.1
* Enhancements
  * Removed Selenium Platform.
        Still support Selenium driver by wrapping it with a Watir browser

Version 2.0.0 / 2016-11-22
* Enhancements
  * Added focused? method on element. (Thanks Joe Schulte)
  * Updated to use Watir 6 instead of Watir-Webdriver (Thanks Robert MacCracken)
        This change requires updates to your project.  You will need to update your
        Gemfile to use 'watir' instead of 'watir-webdriver' and you will need to
        update any require statement you might have.  Also, Watir 6 is more strick
        with text_field and text_area.  You will have to use the proper one or it
        will not locate the element.

Version 1.2.2 / 2016-11-17
* Fixes
  * Fixed a bug that was introduced in the latest release

Version 1.2.1 / 2016-11-11
* Enhancements
  * Added numerous missing element types
  * Support for Selenium 3 (Thanks Titus Fortner)
  * Added new generated method for Image - (name)_loaded? (Thanks joesho112358)
  * Added CSS support for Watir (Thanks Titus Fortner)
  * Added two new methods that check without throwing exception
        - check_visible
        - check_exists

Version 1.2.0 / 2016-6-15
* Enhancements
  * Added array methods to section collections (Thanks Cohen Carlisle)
  * Ensuring that method_missing is always forwarded to the root element (Thanks Cohen Carlisle)
  * Added ability to call style method with no parameters (Thanks Justin Watts)
    - with Watir will return all styles; with Selenium will return empty string
  * Cleaned up frame and iframe nesting (Thanks Jon Snow)
  * Support for adding other platforms (Thanks pvmeerbe)

=== Version 1.1.1 / 2016-1-7
* Enhancements
  * Added row accessor method and support for finding row elements directly (Thanks Ethan Hedrick)
  * Added list_items method to UnorderedList to get an array of children.
  * Speed optimizations for UnorderedList
  * Added list_items method to OrderedList to get an array of children.