@@ -14,7 +14,14 @@ module PageObject
       # Clear the TextArea
       #
       def clear
-        element.wd.clear
+        element.clear
+      end
+
+      #
+      # append the text to the end of the text in the text area
+      #
+      def append(text)
+        element.append(text)
       end
 
       protected
